deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: jakartaee-google-cloud
  labels:
    app: jakartaee-google-cloud
spec:
  type: NodePort
  selector:
    app: jakartaee-google-cloud
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jakartaee-google-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jakartaee-google-cloud
  template:
    metadata:
      labels:
        app: jakartaee-google-cloud
        version: v1
    spec:
      containers:
        - name: jakartaee-google-cloud
          image: gcr.io/zippy-starlight-256807/jakartaee-google-cloud:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 45
      restartPolicy: Always
