jakartaee-ingress-deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jakartaee-google-cloud-ingress
spec:
  backend:
    serviceName: jakartaee-google-cloud
    servicePort: 8080
